--- a/PractiseLeetCode/PractiseLeetCode.csproj
+++ b/PractiseLeetCode/PractiseLeetCode.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>PractiseLeetCode.LeetCodeProblems.Program</StartupObject>
+    <StartupObject>PractiseLeetCode.KadensAlgo.KadensImplementation</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
